[package]

name = "static"
version = "0.0.1"
authors = ["Zach Pomerantz <zmp@umich.edu>"]
description = "Static file serving for Iron."
repository = "https://github.com/iron/static"
license = "MIT"

[dependencies]
iron = "*"
time = "*"
router = "*"

[dependencies.iron-test]

git = "https://github.com/SlightlyCyborg/iron-test.git"

[dependencies.mount]

git = "https://github.com/iron/mount.git"


